Added material design light, simple home page and travis

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Preact PWA",
-  "short_name": "Preact PWA",
+  "name": "Digital Escape Velocity LTD",
+  "short_name": "Digital Escape Velocity",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
