--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "eslint src && preact test",
+    "test": "eslint src",
     "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
-    "build": "preact build",
-    "serve": "preact build && preact serve",
+    "build": "preact build --no-prerender",
+    "serve": "preact build --no-prerender && preact serve",
     "dev": "preact watch"
   },
   "keywords": [],
@@ -20,11 +20,17 @@
     "eslint": "^4.2.0",
     "eslint-config-synacor": "^1.0.1",
     "if-env": "^1.0.0",
-    "preact-cli": "^1.3.0"
+    "preact-cli": "^1.3.0",
+    "webpack-bundle-analyzer": "^2.8.3",
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
+    "material-design-lite": "^1.3.0",
     "preact": "^8.2.1",
     "preact-compat": "^3.16.0",
-    "preact-router": "^2.5.4"
+    "preact-material-components": "^1.0.14",
+    "preact-mdl": "^2.2.1",
+    "preact-router": "^2.5.4",
+    "webfontloader": "^1.6.28"
   }
 }
