--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
   "author": "",
   "license": "ISC",
   "eslintConfig": {
-    "extends": "eslint-config-synacor"
+    "extends": "eslint-config-synacor",
+    "rules": {
+      "react/no-danger": 0
+    }
   },
   "devDependencies": {
     "eslint": "^4.2.0",
     "eslint-config-synacor": "^1.0.1",
     "if-env": "^1.0.0",
-    "preact-cli": "^1.3.0",
-    "webpack-bundle-analyzer": "^2.8.3",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "preact-cli": "^1.3.0"
   },
   "dependencies": {
     "material-design-lite": "^1.3.0",
@@ -34,5 +35,9 @@
     "preact-router": "^2.5.4",
     "sass-loader": "^6.0.6",
     "webfontloader": "^1.6.28"
+  },
+  "performance": {
+    "maxAssetSize": 500000,
+    "maxEntrypointSize": 500000
   }
 }
