--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "preact-cli": "^1.3.0"
   },
   "dependencies": {
+    "markdown": "^0.5.0",
     "material-design-lite": "^1.3.0",
     "node-sass": "^4.5.3",
     "preact": "^8.2.1",
     "preact-compat": "^3.17.0",
+    "preact-markup": "^1.6.0",
     "preact-material-components": "^1.0.14",
     "preact-mdl": "^2.2.1",
     "preact-router": "^2.5.4",
